# Tuby

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tuby.py
Image/: banner.psd  download-Recovered.psd
Tuby.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tuby/: cli.py  dengine.py  gui.py  gui_alpha.py  main.py  tuby-gui.py  tuby.py  tubygui.py  validate.py
tuby/application/: linux.py  requirements.txt  tuby.spec  win10.py
tuby/assets/: download-Recovered-Recovered.psd  ytlogo-Recovered.psd
tuby/assets/modules/pytube3-9.6.4/: LICENSE
tuby/assets/modules/pytube3-9.6.4/pytube/: extract.py
tuby/assets/modules/pytube3-9.6.4/pytube3.egg-info/: SOURCES.txt
