[metadata]
name = Tuby
version = 3.5.8
author = Guru Prasadh J.
author_email = guruprasadh_j@outlook.com
description = Super Fast YouTube Downloader
license = MIT
url = https://github.com/guruprasadhj/Tuby
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
project_urls =
    Bug Reports=https://github.com/guruprasadhj/Tuby/issues
    Source=https://github.com/guruprasadhj/Tuby/

[options]
packages = find:

[options.entry_points]
console_scripts =
    tuby-gui  = tuby.tuby:main
    tuby-cli  = tuby.main:main
